Version: 3.5.0
Date: ????
  Features:
    - Added new page contents:
      - Number of module slots will be shown on all entities that support modules (https://todo.sr.ht/~raiguard/factorio-mods/57)
      - [Recipe] Catalyst amounts are shown in ingredient and product tooltips (https://todo.sr.ht/~raiguard/factorio-mods/59)
  Bugfixes:
    - [Recipe] Fixed that recipes were counting fluids when testing crafter ingredient limits
    - [Resource] Fixed that fluid resource products would not show temperature (https://todo.sr.ht/~raiguard/factorio-mods/60)
---------------------------------------------------------------------------------------------------
Version: 3.4.5
Date: 2022-06-12
  Bugfixes:
    - Fixed a crash when a mining tool is used in a recipe (https://todo.sr.ht/~raiguard/factorio-mods/29)
---------------------------------------------------------------------------------------------------
Version: 3.4.4
Date: 2022-06-12
  Bugfixes:
    - Fixed a crash when a character has no crafting categories
    - Fixed a crash when the GUI tried to display the dummy-steel-axe item (https://todo.sr.ht/~raiguard/factorio-mods/28)
---------------------------------------------------------------------------------------------------
Version: 3.4.3
Date: 2022-05-22
  Bugfixes:
    - Fixed a crash when a technology has no research ingredients (#117)
---------------------------------------------------------------------------------------------------
Version: 3.4.2
Date: 2022-05-22
  Bugfixes:
    - Fixed a crash when an entity is mineable, but has no mineable products (#118)
---------------------------------------------------------------------------------------------------
Version: 3.4.1
Date: 2022-05-21
  Changes:
    - Updated Korean locale (by x2605) (#115)
    - Updated Russian locale (by astorin) (#116)
  Bugfixes:
    - Fixed flib dependency (#114)
---------------------------------------------------------------------------------------------------
Version: 3.4.0